--- a/src/Login.html
+++ b/src/Login.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Login</title>
-  <script type="module" crossorigin src="../assets/login-C5RgXwyJ.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-CPEeNd1r.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-Bp9xqjfR.css">
+  <script type="module" crossorigin src="../assets/login-NROqRDsR.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-BxazBmZi.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Bi39WSay.css">
 </head>
 
 <body
@@ -80,7 +80,6 @@
     &copy; 2025 ComplaNet — University Complaint Management System
   </footer>
 
-  <script src="./darkMode.js"></script>
 
 </body>
 
