--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/supabaseClient-CPEeNd1r.js"></script>
-  <script type="module" crossorigin src="../assets/darkMode-BNH4bXmr.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-Bp9xqjfR.css">
+  <script type="module" crossorigin src="../assets/darkMode-BxazBmZi.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Bi39WSay.css">
 </head>
 
 <body
@@ -88,8 +87,10 @@
       <a href="StudentBehaviorForm.html"
         class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba]  transition-all duration-300 ">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
+          <i
+            class="fas fa-user-friends text-5xl text-white group-hover:text-black dark:text-gray-200 dark:group-hover:text-gray-200 mb-3 group-hover:scale-110 transition-all duration-300"></i>
           <h3
-            class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-">
+            class="text-xl font-semibold text-white group-hover:text-black dark:text-[var(--color-text-dark)] dark:group-hover:text-white group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
             Student Behavior</h3>
           <p
             class="mt-2 text-center text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm">
@@ -101,8 +102,10 @@
       <a href="AdministrativeForm.html"
         class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)]  rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
+          <i
+            class="fas fa-file-alt text-5xl text-white group-hover:text-black dark:text-gray-200 dark:group-hover:text-gray-200 mb-3 group-hover:scale-110 transition-all duration-300"></i>
           <h3
-            class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
+            class="text-xl font-semibold text-white group-hover:text-black dark:text-[var(--color-text-dark)] dark:group-hover:text-white group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
             Administrative</h3>
           <p
             class="mt-2 text-center text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm">
@@ -114,8 +117,10 @@
       <a href="TechnicalForm.html"
         class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
+          <i
+            class="fas fa-laptop-code text-5xl text-white group-hover:text-black dark:text-gray-200 dark:group-hover:text-gray-200 mb-3 group-hover:scale-110 transition-all duration-300"></i>
           <h3
-            class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
+            class="text-xl font-semibold text-white group-hover:text-black dark:text-[var(--color-text-dark)] dark:group-hover:text-white group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
             Technical</h3>
           <p
             class="mt-2 text-center text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm">
@@ -127,8 +132,10 @@
       <a href="AcademicForm.html"
         class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
+          <i
+            class="fas fa-graduation-cap text-5xl text-white group-hover:text-black dark:text-gray-200 dark:group-hover:text-gray-200 mb-3 group-hover:scale-110 transition-all duration-300"></i>
           <h3
-            class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
+            class="text-xl font-semibold text-white group-hover:text-black dark:text-[var(--color-text-dark)] dark:group-hover:text-white group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
             Academic</h3>
           <p
             class="mt-2 text-center text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm">
@@ -140,8 +147,10 @@
       <a href="FacilityForm.html"
         class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
+          <i
+            class="fas fa-building text-5xl text-white group-hover:text-black dark:text-gray-200 dark:group-hover:text-gray-200 mb-3 group-hover:scale-110 transition-all duration-300"></i>
           <h3
-            class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
+            class="text-xl font-semibold text-white group-hover:text-black dark:text-[var(--color-text-dark)] dark:group-hover:text-white group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
             Facility</h3>
           <p
             class="mt-2 text-center text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm">
@@ -153,8 +162,10 @@
       <a href="OtherForm.html"
         class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
+          <i
+            class="fas fa-ellipsis-h text-5xl text-white group-hover:text-black dark:text-gray-200 dark:group-hover:text-gray-200 mb-3 group-hover:scale-110 transition-all duration-300"></i>
           <h3
-            class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
+            class="text-xl font-semibold text-white group-hover:text-black dark:text-[var(--color-text-dark)] dark:group-hover:text-white group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
             Other</h3>
           <p
             class="mt-2 text-center text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-sm">
@@ -196,12 +207,9 @@
           Quick Navigation
         </h2>
         <ul class="space-y-2 text-sm">
-          <li><a href="./UserDashboard.html"
-              class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
-          <li><a href="./Newcomplaint.html"
-              class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-          <li><a href="./Mycomplaint.html"
-              class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+          <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
+          <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
+          <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
         </ul>
       </div>
 
@@ -221,10 +229,12 @@
 
           <ul class="mt-3 space-y-2 pl-3">
             <li><a href="./AcademicForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic
+                Complaint</a>
             </li>
             <li><a href="./FacilityForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility
+                Complaint</a>
             </li>
             <li><a href="./AdministrativeForm.html"
                 class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Administrative
@@ -233,10 +243,12 @@
                 class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Student Behavior
                 Complaint</a></li>
             <li><a href="./TechnicalForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical
+                Complaint</a>
             </li>
             <li><a href="./OtherForm.html"
-                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a></li>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a>
+            </li>
           </ul>
         </details>
       </div>
