--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/userDashboard-ClQMTcPE.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-CPEeNd1r.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-BNH4bXmr.js">
-  <link rel="modulepreload" crossorigin href="../assets/notifications-BsnUUxiz.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-Bp9xqjfR.css">
+  <script type="module" crossorigin src="../assets/userDashboard-sqSugXVa.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-BxazBmZi.js">
+  <link rel="modulepreload" crossorigin href="../assets/notifications-BlDC-u-s.js">
+  <link rel="stylesheet" crossorigin href="../assets/darkMode-Bi39WSay.css">
 </head>
 
 <body
@@ -103,35 +102,68 @@
     bg-gray-700 text-white
     hover:bg-blue-400 hover:-translate-y-0.5
     shadow-[0_4px_12px_rgba(0,0,0,0.3)]
-    transition-all duration-300 mb-8" onclick="window.location.href='Newcomplaint.html'">
+    transition-all duration-300 mb-8 flex items-center gap-2" onclick="window.location.href='Newcomplaint.html'">
+      <i class="fas fa-file-alt"></i>
       FILE A COMPLAINT
     </button>
 
     <!-- Complaint Stats -->
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
       <div
-        class="cursor-pointer bg-white dark:bg-gray-800 rounded-xl shadow-md p-4 text-center border-l-4 border-pending"
+        class="group cursor-pointer bg-gradient-to-br from-red-50 to-white dark:from-gray-800 dark:to-gray-900 rounded-2xl shadow-lg p-6 border-l-4 border-pending hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 hover:scale-105"
         onclick="filterComplaints('Pending')">
-        <h3 class="text-xl font-bold text-pending" id="pendingCount">0</h3>
-        <p class="text-gray-500 dark:text-gray-400">Pending Complaints</p>
+        <div class="flex items-center justify-between">
+          <div>
+            <h3 class="text-4xl font-bold text-pending mb-2" id="pendingCount">0</h3>
+            <p class="text-gray-600 dark:text-gray-300 font-medium">Pending Complaints</p>
+          </div>
+          <div
+            class="bg-red-100 dark:bg-red-900/30 p-4 rounded-full group-hover:scale-110 transition-transform duration-300">
+            <i class="fas fa-clock text-3xl text-pending"></i>
+          </div>
+        </div>
       </div>
       <div
-        class="cursor-pointer bg-white dark:bg-gray-800 rounded-xl shadow-md p-4 text-center border-l-4 border-progress"
+        class="group cursor-pointer bg-gradient-to-br from-yellow-50 to-white dark:from-gray-800 dark:to-gray-900 rounded-2xl shadow-lg p-6 border-l-4 border-progress hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 hover:scale-105"
         onclick="filterComplaints('In-Progress')">
-        <h3 class="text-xl font-bold text-progress" id="inProgressCount">0</h3>
-        <p class="text-gray-500 dark:text-gray-400">In-Progress</p>
+        <div class="flex items-center justify-between">
+          <div>
+            <h3 class="text-4xl font-bold text-progress mb-2" id="inProgressCount">0</h3>
+            <p class="text-gray-600 dark:text-gray-300 font-medium">In-Progress</p>
+          </div>
+          <div
+            class="bg-yellow-100 dark:bg-yellow-900/30 p-4 rounded-full group-hover:scale-110 transition-transform duration-300">
+            <i class="fas fa-spinner text-3xl text-progress"></i>
+          </div>
+        </div>
       </div>
       <div
-        class="cursor-pointer bg-white dark:bg-gray-800 rounded-xl shadow-md p-4 text-center border-l-4 border-resolved"
+        class="group cursor-pointer bg-gradient-to-br from-green-50 to-white dark:from-gray-800 dark:to-gray-900 rounded-2xl shadow-lg p-6 border-l-4 border-resolved hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 hover:scale-105"
         onclick="filterComplaints('Resolved')">
-        <h3 class="text-xl font-bold text-resolved" id="resolvedCount">0</h3>
-        <p class="text-gray-500 dark:text-gray-400">Resolved Complaints</p>
+        <div class="flex items-center justify-between">
+          <div>
+            <h3 class="text-4xl font-bold text-resolved mb-2" id="resolvedCount">0</h3>
+            <p class="text-gray-600 dark:text-gray-300 font-medium">Resolved Complaints</p>
+          </div>
+          <div
+            class="bg-green-100 dark:bg-green-900/30 p-4 rounded-full group-hover:scale-110 transition-transform duration-300">
+            <i class="fas fa-check-circle text-3xl text-resolved"></i>
+          </div>
+        </div>
       </div>
       <div
-        class="cursor-pointer bg-white dark:bg-gray-800 rounded-xl shadow-md p-4 text-center border-l-4 border-red-500"
+        class="group cursor-pointer bg-gradient-to-br from-red-50 to-white dark:from-gray-800 dark:to-gray-900 rounded-2xl shadow-lg p-6 border-l-4 border-red-500 hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 hover:scale-105"
         onclick="filterComplaints('Deleted')">
-        <h3 class="text-xl font-bold text-red-500" id="deletedCount">0</h3>
-        <p class="text-gray-500 dark:text-gray-400">Deleted Complaints</p>
+        <div class="flex items-center justify-between">
+          <div>
+            <h3 class="text-4xl font-bold text-red-500 mb-2" id="deletedCount">0</h3>
+            <p class="text-gray-600 dark:text-gray-300 font-medium">Deleted Complaints</p>
+          </div>
+          <div
+            class="bg-red-100 dark:bg-red-900/30 p-4 rounded-full group-hover:scale-110 transition-transform duration-300">
+            <i class="fas fa-trash-alt text-3xl text-red-500"></i>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -193,12 +225,10 @@
             Quick Navigation
           </h2>
           <ul class="space-y-2 text-sm">
-            <li><a href="./UserDashboard.html"
-                class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
-            <li><a href="./Newcomplaint.html"
-                class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
-            <li><a href="./Mycomplaint.html"
-                class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
+            <li><a href="./UserDashboard.html" class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
+            <li><a href="./Newcomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a>
+            </li>
+            <li><a href="./Mycomplaint.html" class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
           </ul>
         </div>
 
@@ -218,10 +248,12 @@
 
             <ul class="mt-3 space-y-2 pl-3">
               <li><a href="./AcademicForm.html"
-                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic Complaint</a>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic
+                  Complaint</a>
               </li>
               <li><a href="./FacilityForm.html"
-                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility Complaint</a>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility
+                  Complaint</a>
               </li>
               <li><a href="./AdministrativeForm.html"
                   class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Administrative
@@ -230,10 +262,12 @@
                   class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Student Behavior
                   Complaint</a></li>
               <li><a href="./TechnicalForm.html"
-                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical Complaint</a>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical
+                  Complaint</a>
               </li>
               <li><a href="./OtherForm.html"
-                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a></li>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a>
+              </li>
             </ul>
           </details>
         </div>
